--- a/css/styles.css
+++ b/css/styles.css
@@ -65,17 +65,28 @@ p {
 /* Navigation Bar */
 
 .navbar {
-  padding: 0 0 4.5rem;
+  padding: 0 200 0 0px;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  left:0;
+  background-color: #ff4c68;
+  width:100%;
+  margin-left: 0;
+  margin-right: 0;
+
 }
 
 .navbar-brand {
   font-family: 'Ubuntu';
   font-size: 2.5rem;
   font-weight: bold;
+  padding: 0 0 0 50px;
+
 }
 
 .nav-item {
-  padding: 0 18px;
+  padding: 0 25px;
 }
 
 .big-heading {
@@ -102,7 +113,7 @@ p {
 }
 
 #title .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 10% 10% 7%;
 }
 
 /* Title Image */
@@ -145,7 +156,7 @@ p {
 
 
 .feature-box {
-  padding: 4.5%;
+  padding: 2%;
 }
 
 .icon {
